tests/test89.rael.exp
Error [tests/test89.rael:1:14]: Index too big
| log "string" at 8
|              ^
